Валидация + мелкие правки

--- a/src/Germadent.Rma.App/Germadent.Rma.App/Properties/Resources.resx
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Properties/Resources.resx
@@ -120,4 +120,7 @@
   <data name="AppTitle" xml:space="preserve">
     <value>Рабочее место администратора</value>
   </data>
+  <data name="Tooltip_RequredField" xml:space="preserve">
+    <value>Поле обязательно к заполнению</value>
+  </data>
 </root>
